Avoid tags to overlap

--- a/src/assets/general.css
+++ b/src/assets/general.css
@@ -42,7 +42,7 @@
   margin-right: 3%;
 }
 .uc-description {
-  width: 85%;
+  flex-grow: 1;
   text-align: start;
   padding-left: 10px;
 }
@@ -50,20 +50,9 @@
   display: flex;
   align-items: center;
 }
-@media screen and (min-width: 851px) and (max-width: 1200px) {
-  .tags {
-    width: 21%;
-  }
-  .uc-description {
-    width: 71%;
-  }
-}
 @media screen and (max-width: 450px) {
   .item-picture {
     display: none;
-  }
-  .uc-description {
-    width: 79%;
   }
 }
 .model-item {
